# wg-ad-updater

./: README.md  pyproject.toml
tests/: test_wgadupdater.py  test_wgrequestupdater.py
wgadupdater/: main.py  updater.py  webdriver.py
wgadupdater/config/: logging.ini
wgrequestupdater/: main.py  updater.py  webdriver.py
wgrequestupdater/config/: logging.ini
